# reflet

./: .gitignore  PLAN.md  README.md  generate-icon.mjs  package-lock.json  package.json
.ia/: analyse-perf-securite.md  arborescence.md  architecture.md  config.md  conformite-skills.md  design.md  langues.md  limites-code.md  performance.md  plan.md  ressources.md  resume.md  suivi.md
docs/: prompt-loader-bug.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  compression.rs  config.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  scheduler.rs  state.rs  sync.rs  tray.rs  watcher.rs
src-tauri/src/commands/: app.rs  logs.rs  mod.rs  pairs.rs  settings.rs  sync.rs
src-tauri/src/sync/: archive.rs  archive_io.rs  backup.rs  diff.rs  exec.rs  io.rs  mod.rs  plan.rs  scan.rs  types.rs  util.rs
src/lib/: confirm.svelte.ts  format.ts  ipc.ts  store.svelte.ts  types.ts
src/lib/components/: CardHeader.svelte  CardStatusLine.svelte  ChipsInput.svelte  ColorPicker.svelte  CompressionSettings.svelte  ConfirmModal.svelte  DryRunModal.svelte  ExclusionAddModal.svelte  ExclusionsManager.svelte  IntervalPicker.svelte  Loader.svelte  PairCard.svelte  PairEditModal.svelte  ProgressBar.svelte  ScheduleTimesEditor.svelte  Select.svelte  StatusBadge.svelte  Switch.svelte  SyncButton.svelte  VirtualList.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/compression/: +page.svelte
src/routes/exclusions/: +page.svelte
src/routes/logs/: +page.svelte
src/styles/: global.css  tokens.css
(+1 files in other folders)
