[package]
name = "reflet"
version = "1.3.0"
description = "Reflet - synchronisation miroir unidirectionnelle"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reflet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sync engine
walkdir = "2"
notify = { version = "7", features = [] }
filetime = "0.2"
trash = "5"
globset = "0.4"
blake3 = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
dunce = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
zip = { version = "8.6.0", default-features = false, features = ["aes-crypto", "bzip2", "deflate", "zstd"] }
crc32fast = "1.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
